<resources>
    <string name="app_name">Pakar Hero</string>

    <string name="clear">Clear</string>
    <string name="cut">Cut</string>
    <string name="copy">Copy</string>
    <string name="paste">Paste</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>

    <!--Drawer Menus-->
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="feed">My Feed</string>

    <!--App Message-->
    <string name="api_retry_error">Please retry!</string>
    <string name="api_default_error">Something wrong happened!</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="connection_error">Internet connection lost!</string>

    <!--Login-->
    <string name="log_in">Sign In / Join</string>
    <string name="sign_in">Sign In</string>
    <string name="username">UserName</string>
    <string name="username_email">Username / Email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="country_code">Country Code</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="send_new_code">Send New Code</string>
    <string name="facebook_log_in">LOG IN WITH FACEBOOK</string>
    <string name="data_check">Checking info</string>
    <string name="or_join">Join</string>
    <string name="please_wait">Please wait...</string>
    <string name="canceling">Canceling...</string>
    <string name="enter_email">Enter your email to\nsign in or Join</string>
    <string name="verification">Please enter verification code\nsent to your phone</string>
    <string name="verify_code">Verification Code</string>
    <string name="terms_of_use_desc">I agree to the PakarHero Terms of Use</string>
    <string name="terms_of_use">PakarHero Terms of Use</string>
    <string name="forgot_password_success">Temporary password has been sent to your email.</string>
    <string name="join_success">Your verification code has been sent to your phone.</string>
    <string name="customer_reviews">Customer Reviews</string>

    <!--Profile-->
    <string name="profile">Profile</string>
    <string name="certification">Certification</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="languages">Language(s)</string>
    <string name="desc">Short Description of your Expertise</string>
    <string name="paypal_email">Paypal Email</string>
    <string name="bank_name">Bank Name</string>
    <string name="bank_branch_name">Bank Branch Name</string>
    <string name="bank_account_name">Bank Account Name</string>
    <string name="bank_account_number">Bank Account Number</string>

    <string name="period">Period</string>
    <string name="description">Description</string>
    <string name="company">Company</string>
    <string name="price">Price</string>
    <string name="field_of_expertise">Field of Expertise</string>
    <string name="currency">Currency</string>
    <string name="session_length">Session Length</string>
    <string name="session_unit">Session Unit</string>

    <!--Login Validation-->
    <string name="empty_email">Please provide a non empty email.</string>
    <string name="invalid_email">Please provide a valid email.</string>
    <string name="empty_password">Please provide a non empty password.</string>

    <!--about fragment-->
    <string name="project_info">This sample app implements MVP architecture using Dagger2, GreenDao, RxJava, FastAndroidNetworking and PlaceholderView</string>
    <string name="link_mvp_blog">1. https://blog.mindorks.com</string>
    <string name="link_mvp_repo">2. https://github.com/MindorksOpenSource/android-mvp-architecture</string>
    <string name="link_mindorks_blog">3. https://blog.mindorks.com</string>
    <string name="link_mindorks_repo">4. https://github.com/MindorksOpenSource</string>
    <string name="version">"version"</string>

    <!--rating dialog-->
    <string name="rate_us">Rate Us</string>
    <string name="rating_message">Please let us know, how can we improve ourselves?</string>
    <string name="rating_play_store_redirect_message_line_1">Awesome! Thank you for the 5 stars.</string>
    <string name="rating_play_store_redirect_message_line_2">Please help others, in knowing some good things about this app.</string>
    <string name="rating_play_store_text">Rate us on Play Store</string>
    <string name="rating_not_provided_error">Please provide us stars.</string>
    <string name="rating_thanks">Thank you!</string>

    <!--play store-->
    <string name="app_google_play_store_link">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link">"market://details?id="</string>

    <!--button-->
    <string name="later">Later</string>
    <string name="submit">Submit</string>

    <!--feed-->
    <string name="title">My Feed</string>
    <string name="open_source">Open Source</string>
    <string name="blog">Blog</string>

    <!--empty state-->
    <string name="empty_screen">We do not have anything\nhere right now.</string>
    <string name="please_retry">Please Retry</string>
    <string name="retry">Retry</string>

    <!--errors-->
    <string name="wrong_name_password">Wrong username or password.</string>
</resources>
