<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp">

        <TextView
            android:id="@+id/login_enter_email"
            style="@style/AuthTextFieldLarge"
            android:text="@string/verification"/>

        <RelativeLayout
            android:id="@+id/verify_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_base_margin"
            android:layout_marginBottom="@dimen/login_base_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/verify_til"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintTextAppearance="@style/SignInTextLabel">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/verify_et"
                    style="@style/AuthTextField"
                    android:paddingTop="@dimen/login_input_padding"
                    android:paddingBottom="@dimen/login_input_padding"
                    android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0987654321.-_@ "
                    android:inputType="text|textNoSuggestions|textVisiblePassword"
                    android:maxLength="10"
                    android:hint="@string/verify_code" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/send_new_code"
                style="@style/AuthTextFieldSmall"
                android:layout_below="@+id/verify_til"
                android:layout_centerHorizontal="true"
                android:textColor="@color/light_blue"
                android:text="@string/send_new_code"
                android:textAlignment="center"/>
        </RelativeLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_check_white_24dp" />

</RelativeLayout>