<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/field_of_expertise_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/field_of_expertise"
            android:textSize="16sp"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/field_of_expertise_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="@dimen/login_input_padding"
            android:paddingTop="@dimen/login_input_padding" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/price_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/SignInTextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/price_et"
                style="@style/AuthTextField"
                android:paddingTop="@dimen/login_input_padding"
                android:paddingBottom="@dimen/login_input_padding"
                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0987654321.-_@ "
                android:inputType="text|textNoSuggestions|textVisiblePassword"
                android:maxLength="30"
                android:hint="@string/price" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/currency_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/currency"
            android:textSize="16sp"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/currency_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="@dimen/login_input_padding"
            android:paddingTop="@dimen/login_input_padding" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/session_length_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/session_length"
            android:textSize="16sp"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/session_length_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="@dimen/login_input_padding"
            android:paddingTop="@dimen/login_input_padding" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/session_unit_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="@string/session_unit"
            android:textSize="16sp"
            android:visibility="visible" />

        <Spinner
            android:id="@+id/session_unit_sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingBottom="@dimen/login_input_padding"
            android:paddingTop="@dimen/login_input_padding" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/image_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <ImageView
            android:id="@+id/picture_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:srcCompat="@drawable/ic_add_a_photo_grey_24dp"/>
    </RelativeLayout>

</LinearLayout>