<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/mToolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            android:contentInsetRight="0dp"
            android:contentInsetEnd="0dp"
            app:contentInsetRight="0dp"
            app:contentInsetEnd="0dp">

        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/login_enter_username_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/login_base_margin"
            android:layout_marginBottom="@dimen/login_base_margin">

            <TextView
                android:id="@+id/login_enter_username"
                style="@style/AuthTextFieldLarge"
                android:gravity="center"
                android:text="@string/enter_email"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/login_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_enter_username_l"
            android:layout_marginBottom="@dimen/login_base_margin">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/username_et"
                    style="@style/AuthTextField"
                    android:paddingTop="@dimen/login_input_padding"
                    android:paddingBottom="@dimen/login_input_padding"
                    android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0987654321.-_@ "
                    android:inputType="text|textNoSuggestions|textVisiblePassword"
                    android:maxLength="30"
                    android:hint="@string/username" />
            </android.support.design.widget.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/login_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/login_username_layout"
            android:layout_marginBottom="@dimen/login_half_margin"
            android:visibility="gone">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_password_tl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <!--app:hintTextAppearance="@style/SignInTextLabel"
                app:passwordToggleDrawable="@drawable/selector_password_toggle"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/selector_password_toggle_color"-->

                <EditText
                    android:id="@+id/password_et"
                    style="@style/AuthTextField"
                    android:paddingTop="@dimen/login_input_padding"
                    android:paddingBottom="@dimen/login_input_padding"
                    android:inputType="textPassword"
                    android:hint="@string/password"/>
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:id="@+id/forgot_msg"
                style="@style/AuthTextFieldSmall"
                android:layout_below="@+id/login_password_tl"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:text="@string/forgot_password"
                android:textAlignment="center"/>
        </RelativeLayout>
    </RelativeLayout>
</LinearLayout>