<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/company_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/SignInTextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/company_et"
                style="@style/AuthTextField"
                android:paddingTop="@dimen/login_input_padding"
                android:paddingBottom="@dimen/login_input_padding"
                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0987654321.-_@ "
                android:inputType="text|textNoSuggestions|textVisiblePassword"
                android:maxLength="30"
                android:hint="@string/company" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/period_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/SignInTextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/period_et"
                style="@style/AuthTextField"
                android:paddingTop="@dimen/login_input_padding"
                android:paddingBottom="@dimen/login_input_padding"
                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0987654321.-_@ "
                android:inputType="text|textNoSuggestions|textVisiblePassword"
                android:maxLength="30"
                android:hint="@string/period" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/desc_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/login_base_margin"
        android:layout_marginHorizontal="10dp">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/SignInTextLabel">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/desc_et"
                style="@style/AuthTextField"
                android:paddingTop="@dimen/login_input_padding"
                android:paddingBottom="@dimen/login_input_padding"
                android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0987654321.-_@ "
                android:inputType="text|textNoSuggestions|textVisiblePassword"
                android:maxLength="30"
                android:hint="@string/description" />
        </android.support.design.widget.TextInputLayout>
    </RelativeLayout>

</LinearLayout>