<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/login_base_margin">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <RelativeLayout
                android:id="@+id/join_username_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_half_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/SignInTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/username_et"
                        style="@style/AuthTextField"
                        android:paddingTop="@dimen/login_input_padding"
                        android:paddingBottom="@dimen/login_input_padding"
                        android:digits="AaBbCcDdEeFfGgHhIiJjKkLlMmNnOoPpQqRrSsTtUuVvWwXxYyZz0987654321.-_@ "
                        android:inputType="text|textNoSuggestions|textVisiblePassword"
                        android:maxLength="30"
                        android:hint="@string/username" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/join_password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_half_margin">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/login_password_tl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/SignInTextLabel"
                    app:passwordToggleEnabled="true">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password_et"
                        style="@style/AuthTextField"
                        android:paddingTop="@dimen/login_input_padding"
                        android:paddingBottom="@dimen/login_input_padding"
                        android:inputType="textPassword"
                        android:hint="@string/password"/>
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/join_country_code_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_half_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/SignInTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/country_code_et"
                        style="@style/AuthTextField"
                        android:paddingTop="@dimen/login_input_padding"
                        android:paddingBottom="@dimen/login_input_padding"
                        android:inputType="phone|textNoSuggestions|textVisiblePassword"
                        android:maxLength="30"
                        android:hint="@string/country_code" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/join_phone_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_half_margin">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/SignInTextLabel">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/phone_number_et"
                        style="@style/AuthTextField"
                        android:paddingTop="@dimen/login_input_padding"
                        android:paddingBottom="@dimen/login_input_padding"
                        android:inputType="phone|textNoSuggestions|textVisiblePassword"
                        android:maxLength="30"
                        android:hint="@string/phone_number" />
                </android.support.design.widget.TextInputLayout>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/join_terms_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <CheckBox
                    android:id="@+id/cbTerms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:id="@+id/tvTerms"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/terms_of_use_desc"/>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.5"/>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/ic_check_white_24dp" />

</RelativeLayout>